<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ContactoActivity" >

    <include android:id="@+id/toolbar"
        layout="@layout/appbar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/tam_titulo"
        android:text="@string/titulo_contacto"/>

    <ImageView
        android:id="@+id/imgFotoBio"
        android:layout_width="@dimen/ancho_foto_bio"
        android:layout_height="@dimen/alto_foto_bio"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/androides"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvNombreLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_nombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_email" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvPasswLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_passw" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvMensajeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_mensaje">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btEnviar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_enviar"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_text_tittle" />

    </LinearLayout>

</LinearLayout>