<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ConfigurarCuentaActivity">

        <include android:id="@+id/toolbar"
            layout="@layout/appbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tam_titulo"
            android:text="@string/confCuenta"/>

        <ImageView
            android:id="@+id/imgFotoBio"
            android:layout_width="@dimen/ancho_foto_bio"
            android:layout_height="@dimen/alto_foto_bio"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/androides"
            android:contentDescription="@string/app_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inNombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/contact_nombre" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button android:id="@+id/buttonGuardar"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:text="@string/btnGuardarCuenta"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>